crates/uitest/fixtures/ty/def/trait_impl_helper_signature_context.snap
---
source: crates/uitest/tests/ty.rs
expression: diags
input_file: fixtures/ty/def/trait_impl_helper_signature_context.fe
---
error[6-0003]: trait bound is not satisfied
  ┌─ trait_impl_helper_signature_context.fe:8:22
  │
8 │     fn make(self) -> Slot<{ <Self as LenHelper>::N }>
  │                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Self` doesn't implement `LenHelper`
